# metrovelox

./: .gitignore  .gitmodules  Makefile  README.md  config.env  config.env.example  env.sh.template
.github/workflows/: ci.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  metrics.py  streaming.py  streams_config.py
apps/api/app/mcp/: server.py
apps/api/app/tools/: tfl.py
apps/frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/polaris-console/: DISCLAIMER
argocd/: root.tmpl.yaml  root.yaml
argocd/apps/: airflow.tmpl.yaml  airflow.yaml  apicurio.tmpl.yaml  apicurio.yaml  argocd-config.tmpl.yaml  argocd-config.yaml  cert-manager.yaml  flink-operator.yaml  gateway.tmpl.yaml  gateway.yaml  kafka-cluster.tmpl.yaml  kafka-cluster.yaml  kafka-ui.tmpl.yaml  kafka-ui.yaml  keycloak.tmpl.yaml  keycloak.yaml  namespaces.tmpl.yaml  namespaces.yaml  polaris.tmpl.yaml  (+18 more)
docs/: ARCHITECTURE.md  CAPSTONE_SCORECARD.md  CATALOG.md  ENV-SETUP.md  GOVERNANCE_IDENTITY_AND_ACCESS.md  QUICKSTART.md  ROADMAP.md  SCALING_AND_COST.md  TESTING_AND_RESILIENCE.md
scripts/: airflow-keycloak-authz-attach.sh  airflow-keycloak-rbac.sh  airflow_keycloak_authz_attach.py  bootstrap.sh  build-and-push-apps.sh  build-polaris-console.sh  destroy-all.sh  keycloak-assign-user.sh  new-env.sh  opa-test.sh  polaris-bootstrap-human-principals.sh  polaris-bootstrap-principals.sh  post-deploy.sh  render-manifests.sh  streaming-toggle.sh  tf-apply.sh  vault-init.sh
(+242 files in other folders)
